@@ -98,6 +98,17 @@
       </component>
     </version>
   </module>
+  <module name="bakery">
+    <version release="HEAD">
+      <component name="bakery" dir="bakery" group="extras">
+        <podir dir="po"/>
+        <potname name="bakery.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
+      </component>
+    </version>
+  </module>
   <module name="balsa">
     <version release="HEAD">
       <component name="balsa" dir="balsa" group="fifth-toe">
