@@ -1,3 +1,7 @@
+2005-03-30  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added bakery.
+
 2005-03-29  Frank Arnold  <farnold@cvs.gnome.org>
 
 	* translation-status.xml: gtkhtml HEAD uses "gtkhtml-3.8.pot" now.
